RESOLVED FIXED189059
Fix bit-rotted Interpreter::dumpRegisters() and move it to the VMInspector.
https://bugs.webkit.org/show_bug.cgi?id=189059
Summary Fix bit-rotted Interpreter::dumpRegisters() and move it to the VMInspector.
Mark Lam
Reported 2018-08-28 14:54:40 PDT
Also remove dumpCallFrame() from the jsc shell.
Attachments
proposed patch. (27.00 KB, patch)
2018-08-28 15:04 PDT, Mark Lam
saam: review+
Mark Lam
Comment 1 2018-08-28 14:54:58 PDT
Mark Lam
Comment 2 2018-08-28 15:04:30 PDT
Created attachment 348346 [details] proposed patch.
Mark Lam
Comment 3 2018-08-28 16:44:46 PDT
Thanks for the review. Landed in r235450: <http://trac.webkit.org/r235450>.
Note You need to log in before you can comment on or make changes to this bug.