Source/JavaScriptCore/interpreter/Interpreter.h
@@ -125,8 +125,6 @@ namespace JSC {
         static EncodedJSValue JSC_HOST_CALL constructWithNativeErrorConstructor(ExecState*);
         static EncodedJSValue JSC_HOST_CALL callNativeErrorConstructor(ExecState*);
 
-        JS_EXPORT_PRIVATE void dumpCallFrame(CallFrame*);
-
         void getStackTrace(JSCell* owner, Vector<StackFrame>& results, size_t framesToSkip = 0, size_t maxStackSize = std::numeric_limits<size_t>::max());
 
     private:
@@ -148,10 +146,6 @@ namespace JSC {
 
         JSValue execute(CallFrameClosure&);
 
-
-
-        void dumpRegisters(CallFrame*);
-        
         VM& m_vm;
 #if !ENABLE(JIT)
         CLoopStack m_cloopStack;
